--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="css/bootsrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"&gt;>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" &gt;>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,19 +42,21 @@
   </nav>
 
   <header class="page-header gradient">
-    <div class="container">
-      <div class="row">
+    <div class="container pt-3">
+      <div class="row align-items-center justify-content-center">
         <div class="col-md-6">
           <h2>Build website using MDB</h2>
-          <p>It's crafted with the latest trenf of desin & code with all modern approaches. It's a robust & multi-dimensional usable template.</p>
+          <p>It's crafted with the latest trenf of desin & code with all modern approaches. It's a robust &
+            multi-dimensional usable template.</p>
         </div>
         <div class="col-md-6">
-          <img src="./pictures/613e3af841dd8708ae99eb8e_people-working-collaborating-card-image-export-v0.png" alt="Header image" height="400px"/>
+          <img src="./pictures/613e3af841dd8708ae99eb8e_people-working-collaborating-card-image-export-v0.png"
+            alt="Header image" height="400px" />
         </div>
       </div>
     </div>
   </header>
-    
+
   <script src="js/bootstrap.min.js"></script>
 </body>
 
