--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#"> <img src="./pictures/Enlabs_logo.png" alt="" height="50px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,18 +44,80 @@
   <header class="page-header gradient">
     <div class="container pt-3">
       <div class="row align-items-center justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-5">
           <h2>Build website using MDB</h2>
-          <p>It's crafted with the latest trenf of desin & code with all modern approaches. It's a robust &
-            multi-dimensional usable template.</p>
+          <p>
+            It's crafted with the latest trend of desin & code with all modern approaches. It's a robust &
+            multi-dimensional usable template.
+          </p>
+
+          <button type="button" class="btn btn-success btn-lg">
+            Read more
+          </button>
+          <button type="button" class="btn btn-warning btn-lg">
+            Play video
+          </button>
+
+
+
+
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
           <img src="./pictures/613e3af841dd8708ae99eb8e_people-working-collaborating-card-image-export-v0.png"
             alt="Header image" height="400px" />
         </div>
       </div>
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#bfffdc" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,154.7C672,149,768,107,864,85.3C960,64,1056,64,1152,96C1248,128,1344,192,1392,224L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+
+      </path>
+    </svg>
+
+
   </header>
+  <section class="companies">
+    <div class="container text-center">
+      <div class="row" g-5>
+        <div class="col-md-2"><img src="./pictures/img 1.png" alt="Company Logos" height="30px" class="img-fluid"></div>
+        <div class="col-md-2"><img src="./pictures/img 2.png" alt="Company Logos" height="70px" class="img-fluid"></div>
+        <div class="col-md-2"><img src="./pictures/img 3.png" alt="Company Logos" height="70px" class="img-fluid"></div>
+        <div class="col-md-2"><img src="./pictures/img 4.png" alt="Company Logos" height="70px" class="img-fluid"></div>
+        <div class="col-md-2"><img src="./pictures/img 5.png" alt="Company Logos" height="70px" class="img-fluid"></div>
+        <div class="col-md-2"><img src="./pictures/img 6.png" alt="Company Logos" height="60px" class="img-fluid"></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="feature gradient">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#bfffdc" fill-opacity="1" d="M0,128L48,149.3C96,171,192,213,288,234.7C384,256,480,256,576,240C672,224,768,192,864,154.7C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+    <div class="container">
+      <div class="row align-items-center">
+        <col-md-6>
+          <img src="./pictures/613e3af841dd8708ae99eb8e_people-working-collaborating-card-image-export-v0.png" alt="" height="200px">
+        </col-md-6>
+        
+        
+        <col-md-6>
+          <h1 class="my-3">Introducing MDB</h1>
+          <p class="my-4">
+            It's crafted with the latest trend of desin & code with all modern approaches. It's a robust &
+            multi-dimensional usable template.
+          </p>
+          <ul>
+            <li>Best for Creative Agency</li>
+            <li> Built with Latest Technology</li>
+            <li>Super Responsive</li>
+            <li>Creative Design</li>
+          </ul>
+        </col-md-6>
+      </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#bfffdc" fill-opacity="1" d="M0,128L48,149.3C96,171,192,213,288,234.7C384,256,480,256,576,240C672,224,768,192,864,154.7C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+
+
+  </section>
 
   <script src="js/bootstrap.min.js"></script>
 </body>
