--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#bfffdc" fill-opacity="1"
+      <path fill="#fff" fill-opacity="1"
         d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,154.7C672,149,768,107,864,85.3C960,64,1056,64,1152,96C1248,128,1344,192,1392,224L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
 
       </path>
@@ -91,7 +91,7 @@
 
   <section class="feature gradient">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#bfffdc" fill-opacity="1"
+      <path fill="#fff" fill-opacity="1"
         d="M0,128L48,149.3C96,171,192,213,288,234.7C384,256,480,256,576,240C672,224,768,192,864,154.7C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
       </path>
     </svg>
@@ -114,7 +114,7 @@
     </div>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#bfffdc" fill-opacity="1"
+      <path fill="#fff" fill-opacity="1"
         d="M0,128L48,149.3C96,171,192,213,288,234.7C384,256,480,256,576,240C672,224,768,192,864,154.7C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
       </path>
     </svg>
